--- a/Develop/package.json
+++ b/Develop/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "utils": "^0.2.2"
   }
 }
